# RUST-WASM-boilerplate

./: .gitignore  Cargo.toml  README.MD  index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs
